Sat Nov 23 19:20:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): The signature was
	  changed to allow us to pass arguments directly.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div3): Added for the role of
	  the old BigDecimal_div2.

Sat Nov 23 12:31:00 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix global variable name.
	  Now we have following environments (and related variable names).

	  * RUBY_GC_HEAP_INIT_SLOTS
	  * RUBY_GC_HEAP_FREE_SLOTS
	  * RUBY_GC_HEAP_GROWTH_FACTOR (new from 2.1)
	  * RUBY_GC_HEAP_GROWTH_MAX_SLOTS (new from 2.1)

	  * obsolete
	    * RUBY_FREE_MIN       -> RUBY_GC_HEAP_FREE_SLOTS (from 2.1)
	    * RUBY_HEAP_MIN_SLOTS -> RUBY_GC_HEAP_INIT_SLOTS (from 2.1)

	  * RUBY_GC_MALLOC_LIMIT
	  * RUBY_GC_MALLOC_LIMIT_MAX (new from 2.1)
	  * RUBY_GC_MALLOC_LIMIT_GROWTH_FACTOR (new from 2.1)

	  * RUBY_GC_OLDSPACE_LIMIT (new from 2.1)
	  * RUBY_GC_OLDSPACE_LIMIT_MAX (new from 2.1)
	  * RUBY_GC_OLDSPACE_LIMIT_GROWTH_FACTOR (new from 2.1)

	* test/ruby/test_gc.rb: catch up this change.

Sat Nov 23 09:45:49 2013  Aman Gupta <ruby@tmm1.net>

	* marshal.c (w_object): Use HASH_PROC_DEFAULT directly from internal.h

Sat Nov 23 08:43:23 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Rename heap_pages_swept_num to heap_pages_swept_slots to
	  clarify meaning (number of slots, not pages).

Sat Nov 23 08:23:23 2013  Aman Gupta <ruby@tmm1.net>

	* lib/set.rb (class SortedSet): Fix source_location for methods
	  defined via eval.

Sat Nov 23 03:44:03 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master dcce4ff.  Important changes
	  in this commit:

	  Remove automatic detection of gem dependencies files.  This prevents a
	  security hole as described in [ruby-core:58490]

	  Fixed bugs for installing git gems.

	* test/rubygems:  ditto.

Fri Nov 22 22:30:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power):