@@ -1,3 +1,10 @@
+Sat Nov 23 19:46:00 2013  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): Optimize the
+	  calculation algorithm to reduce the number of divisions.
+	  This optimization was proposed by Rafał Michalski.
+	  [Feature #6857] [ruby-core:47130]
+
 Sat Nov 23 19:20:00 2013  Kenta Murata  <mrkn@mrkn.jp>
 
 	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): The signature was
